Added Query fetching elements.

--- a/learning/templates/learning.html.twig
+++ b/learning/templates/learning.html.twig
@@ -1,2 +1,2 @@
 <!-- Add you custom twig html here -->
-<div>Hi <span style="color:red">{{ test_var }}</span>, I am from learning template</div>
+<div>Hi <span class="learning-changes">{{ test_var }}</span>, I am from learning template</div>
